# awsserviceendpoints

./: MANIFEST.in  README.md  requirements.dev.txt  setup.cfg
.github/workflows/: pythonpackage.yml
awspython3serviceendpoints/: __init__.py
awsserviceendpoints/data/: endpoints.json
