[metadata]
name = awspython3serviceendpoints
author = Joseph Wortmann
author_email = jwortmann@quinovas.com
version = 0.0.1
description = Micropackage that changes boto3 to return the standard service endpoints
long_description = Micropackage that changes `boto3` to return the standard service endpoints

[options]
packages = find:
include_package_data = true
