[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[metadata]
name = awsserviceendpoints
author = Joseph Wortmann
author_email = jwortmann@quinovas.com
version = 0.0.1
description = Micropackage that changes boto3 to return the standard service endpoints
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
